# Segfault-Simulator

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  compile_flags.txt  conanfile.py  conanfile.txt  imgui.ini  mkdocs.yml  sanitize-ignorelist.txt
engine/: CMakeLists.txt  README.md
engine/cmake/: embedShaders.cmake  engineAssets.cmake  engineConfig.cmake.in
engine/docs/: shaders.md
engine/include/engine/Color/: Color.h
engine/include/engine/TextRenderer/: textRenderer.h
engine/include/engine/assetStore/: assetStore.h  sprite.h
engine/include/engine/components/: cameraComponent.h  colliderComponent.h  elevationComponent.h  lightEmitterComponent.h  particleEmitterComponent.h  rigidBodyComponent.h  screenSpaceCollider.h  spriteComponent.h  surfaceEffect.h  terrainBoundaryComponent.h  transformComponent.h  waterTileComponent.h
engine/include/engine/ecs/: component.h  ecs.h  entity.h  entity.inl  pool.h  registry.h  registry.inl  system.h
engine/include/engine/game/: game.h  gameObject.h
engine/include/engine/input/: input.h  keyboardInput.h  mouseInput.h
engine/include/engine/logger/: logger.h
engine/include/engine/mapLoader/: mapLoader.h
engine/include/engine/noise/: noise.h
engine/include/engine/particles/: decal.h  particle.h  particleCurves.h  particleEffect.h  particlePrefabs.h
engine/include/engine/renderers/: isometricRenderContext.h  isometricRenderItem.h  isometricRenderQueue.h  openGLQuadRenderer.h  quads.h  renderContext.h  renderLayer.h  renderPass.h  renderQueue.h  terrainShadowRenderer.h
engine/include/engine/rendering/: blendMode.h  glDebug.h  iIsometricRenderer.h  iProjection.h  iQuadRenderer.h  iTerrainHeightSource.h  iTerrainSurfaceSource.h  isometricGeometryRenderer.h  isometricRenderContext.h  openGLIsometricRenderer.h  openGLQuadRenderer.h  quads.h  renderContext.h  renderPass.h  renderProvider.h  sdlColor.h
engine/include/engine/sceneManager/: scene.h  sceneManager.h
engine/include/engine/scripting/: README.md  iLuaApi.h  iLuaConfig.h  iLuaConfigurable.h  luaSchema.h  luaScripting.h  particleLuaApi.h  particleSchema.h
engine/include/engine/systems/: blockGeometrySystem.h  cameraSystem.h  collisionSystem.h  decalSystem.h  isometricLightingSystem.h  isometricRenderSystem.h  movementSystem.h  particleSystem.h  renderSystem.h  spriteRenderSystem.h
engine/include/engine/types/: SDLPtrs.h
engine/include/engine/utils/: allocationMetrics.h  gpuProfiling.h  isometricLightingUtils.h  ui.h
engine/include/engine/webgpu/: nullQuadRenderer.h  webGpuContext.h  webGpuRenderBackend.h  wgpuUtil.h
engine/src/TextRenderer/: TextRenderer.cpp
engine/src/assetStore/: assetStore.cpp
engine/src/core/ecs/: entity.cpp  registry.cpp  system.cpp
engine/src/core/logger/: logger.cpp
engine/src/core/mapLoader/: mapLoader.cpp
engine/src/core/noise/: noise.cpp
engine/src/core/particles/: decalSplatter.cpp  particleEngine.cpp  particlePrefabs.cpp
engine/src/core/scripting/: particleSchema.cpp
engine/src/core/util/: allocationMetrics.cpp  asyncJobQueue.cpp  parallelFor.cpp
engine/src/core/voxel/: voxelMesher.cpp  waterSim.cpp
engine/src/ecs/: entity.cpp  registry.cpp  system.cpp
engine/src/game/: game.cpp  gameObject.cpp
engine/src/input/: input.cpp  keyboardInput.cpp  mouseInput.cpp
engine/src/logger/: logger.cpp
engine/src/mapLoader/: mapLoader.cpp
engine/src/noise/: noise.cpp
engine/src/particles/: particlePrefabs.cpp
engine/src/renderers/: isometricRenderQueue.cpp  openGLQuadRenderer.cpp  renderContext.cpp  terrainShadowRenderer.cpp
engine/src/rendering/: isometricGeometryRenderer.cpp  openGLIsometricRenderer.cpp  openGLQuadRenderer.cpp  renderContext.cpp
engine/src/rendering/modules/: blockGeometry.cpp  decals.cpp  isometricWater.cpp  particles.cpp  spriteShadow.cpp  terrainShadow.cpp
engine/src/rendering/providers/: isometricSpriteShadowProvider.cpp  (+2 more)
engine/src/sceneManager/: scene.cpp  sceneManager.cpp
engine/src/scripting/: particleSchema.cpp
engine/src/systems/: blockGeometrySystem.cpp  decalSystem.cpp  isometricLightingSystem.cpp  isometricRenderSystem.cpp  particleSystem.cpp  spriteRenderSystem.cpp
engine/src/utils/: allocationMetrics.cpp  isometricLightingUtils.cpp  parallelFor.cpp
engine/src/webgpu/: webGpuContext.cpp  webGpuRenderBackend.cpp
engine/tests/: CMakeLists.txt  testHarness.h
engine/tests/core/: CMakeLists.txt
engine/tests/runtime/: CMakeLists.txt
game/: CMakeLists.txt
game/src/: main.cpp
game/src/sampleGame/: sampleGame.cpp  sampleGame.h
sampleGame/: CMakeLists.txt  conanfile.txt
sampleGame/assets/spriteSheets/: Sprite-0001.aseprite  vines.json
sampleGame/assets/sprites/: block.aseprite
sampleGame/src/: config.h  main.cpp  sampleGame.cpp  sampleGame.h
sampleGame/src/InputController/: InputController.cpp  InputController.h
sampleGame/src/controllers/: sunController.h
sampleGame/src/effects/: particleEffects.h
sampleGame/src/gameObjects/: lamp.h  player.h
sampleGame/src/scenes/: gameScene.cpp  gameScene.h
sampleGame/src/scripting/: gameLuaApi.cpp  gameLuaApi.h  luaBindings.cpp  luaBindings.h
sampleGame/src/systems/: TerrainGeneratorSystem.cpp  TerrainGeneratorSystem.h  playerInputSystem.h
sampleGame/src/tags/: playerTag.h
sampleGame/src/voxel/: blockRegistry.h  voxelGenerator.h
sampleGame/web/: shell.html
samplePlatformer/: CMakeLists.txt
samplePlatformer/src/: config.h  main.cpp  platformerGame.cpp  platformerGame.h  spells.h
samplePlatformer/src/components/: platformerComponents.h
samplePlatformer/src/gameObjects/: player.h
samplePlatformer/src/scenes/: platformerScene.cpp  platformerScene.h
samplePlatformer/src/systems/: bloodSystem.h  bulletSystem.h  enemySpawnerSystem.h  enemySystem.h  lifetimeSystem.h  pickupSystem.h  platformerPhysicsSystem.h
samplePlatformer/web/: server.py  shell.html
sampleVoxel3D/: CMakeLists.txt
sampleVoxel3D/src/: config.h  main.cpp  tinyHeightmapGenerator.h  voxel3dGame.cpp  voxel3dGame.h
sampleVoxel3D/src/scenes/: voxel3dScene.cpp  voxel3dScene.h
(+402 files in other folders)
